Bug 482645 - System tray icons are colored wrong when using dark Plasma and light application theme
Summary: System tray icons are colored wrong when using dark Plasma and light applicat...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: System Tray widget (other bugs)
Version First Reported In: 6.0.1
Platform: Arch Linux Linux
: HI normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
: 482638 482941 483047 483210 483213 483323 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-03-07 05:17 UTC by serfreeman1337
Modified: 2024-04-19 16:44 UTC (History)
19 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: Plasma 6.0.4 with Frameworks 6.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description serfreeman1337 2024-03-07 05:17:46 UTC
SUMMARY
Dark icon in system tray on Breeze Dark theme in KDE Plasma

STEPS TO REPRODUCE
1. Open Telegram Desktop

OBSERVED RESULT
A dark icon appears in the system tray

EXPECTED RESULT
The icon should be light in the system tray
Comment 1 Nicolas Fella 2024-03-07 11:05:26 UTC
*** Bug 482638 has been marked as a duplicate of this bug. ***
Comment 3 Alexander Stehlik 2024-03-07 21:06:38 UTC
Other affected programs are:

Nextcloud Desktop
Firewall-Applet
Comment 4 Nate Graham 2024-03-10 03:05:28 UTC
*** Bug 482941 has been marked as a duplicate of this bug. ***
Comment 5 Nicolas Fella 2024-03-10 13:19:38 UTC
*** Bug 483047 has been marked as a duplicate of this bug. ***
Comment 6 Bug Janitor Service 2024-03-10 22:18:00 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/4039
Comment 7 Nicolas Fella 2024-03-11 09:29:32 UTC
*** Bug 483210 has been marked as a duplicate of this bug. ***
Comment 8 Nicolas Fella 2024-03-11 09:44:14 UTC
*** Bug 483213 has been marked as a duplicate of this bug. ***
Comment 9 Nicolas Fella 2024-03-11 17:27:39 UTC
Git commit 257ccabc526ab7f4d5ca12758c1e29af35b048ca by Nicolas Fella.
Committed on 11/03/2024 at 17:01.
Pushed by nicolasfella into branch 'master'.

[applets/systemtray] Load icons with Plasma palette

When using Breeze Twilight, i.e. dark Plasma and lights apps, we need to color the icons with the Plasma colors
Related: bug 479712

M  +24   -6    applets/systemtray/statusnotifieritemsource.cpp
M  +1    -0    applets/systemtray/statusnotifieritemsource.h

https://invent.kde.org/plasma/plasma-workspace/-/commit/257ccabc526ab7f4d5ca12758c1e29af35b048ca
Comment 10 Nicolas Fella 2024-03-11 17:30:15 UTC
Git commit d73c6c4bb938bbd252c5bd69cc93862cba554e32 by Nicolas Fella.
Committed on 11/03/2024 at 17:06.
Pushed by nicolasfella into branch 'Plasma/6.0'.

[applets/systemtray] Load icons with Plasma palette

When using Breeze Twilight, i.e. dark Plasma and lights apps, we need to color the icons with the Plasma colors

To achieve this always set the current palette on the icon loader, which means always creating a custom loader

For the icons in the context menu we want the application palette, so create a separate loader for that
Related: bug 479712

M  +56   -24   applets/systemtray/statusnotifieritemsource.cpp
M  +2    -0    applets/systemtray/statusnotifieritemsource.h

https://invent.kde.org/plasma/plasma-workspace/-/commit/d73c6c4bb938bbd252c5bd69cc93862cba554e32
Comment 11 Nicolas Fella 2024-03-12 19:08:15 UTC
*** Bug 483323 has been marked as a duplicate of this bug. ***
Comment 12 Sebastian Krzyszkowiak 2024-03-14 20:58:59 UTC
This isn't fully fixed - icons that require attention are still dark on dark (for example, Konversation with unread messages).
Comment 13 Nate Graham 2024-03-14 21:13:07 UTC
Any tray icons that render as pixmaps rather than passing along an icon name can run into this issue. That would be an issue in the code of the app itself, though. Without investigating Konversation, I don't know if it does this, but I do know that KTeatime does it.

I would recommend submitting additional bug reports for still-happening issues, as they may have different root causes.
Comment 14 Boltronics 2024-03-15 09:46:38 UTC
Looking good here. Many thanks for such a speedy fix.
Comment 15 Nicolas Fella 2024-03-15 15:13:59 UTC
(In reply to Sebastian Krzyszkowiak from comment #12)
> This isn't fully fixed - icons that require attention are still dark on dark
> (for example, Konversation with unread messages).

Attention icons are fine as far as I can tell. It's the Konversation icon specifically that is not colored correctly
Comment 16 Nicolas Fella 2024-03-15 15:57:58 UTC
The problem is that konv_message and other icons use the ColorScheme-ButtonFocus color role, which isn't wired up in KIconColors
Comment 17 Bug Janitor Service 2024-03-15 17:51:45 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kiconthemes/-/merge_requests/127
Comment 18 Bug Janitor Service 2024-03-16 11:54:14 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/breeze-icons/-/merge_requests/334
Comment 19 Nicolas Fella 2024-03-16 21:06:13 UTC
Git commit f34c059a328f91b5d89c3a94128f93271142a22d by Nicolas Fella.
Committed on 16/03/2024 at 21:06.
Pushed by nicolasfella into branch 'master'.

Use Text color for konv_message icon

Using ButtonFocus is broken because KIconColors doesn't fill that. The blue also
looks out of place compared to other system tray icons.

Instead use Text like most other tray icons

M  +1    -1    icons/status/22/konv_message.svg

https://invent.kde.org/frameworks/breeze-icons/-/commit/f34c059a328f91b5d89c3a94128f93271142a22d
Comment 20 kinoe 2024-03-30 12:58:36 UTC
After todays Plasma 6 update 6.0.2-3 -> 6.0.3-1 this bug is relevant again, after it had been fixed in 6.0.2-3. Telegram-desktop and solaar systray icons are dark on dark.

Global design: Plasma-Twilight
Operating System: Arch Linux 
KDE Plasma Version: 6.0.3
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2
Kernel Version: 6.8.2-zen2-1-zen (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 5700U with Radeon Graphics
Graphics Processor: AMD Radeon Graphics
Comment 21 Colin J Thomson 2024-03-30 13:20:45 UTC
I can confirm I am seeing this since updating to 6.0.3-1 also.

Operating System: Fedora Linux 39
KDE Plasma Version: 6.0.3
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2
Kernel Version: 6.8.2-200.fc39.x86_64 (64-bit)
Graphics Platform: Wayland
Comment 22 kinoe 2024-03-30 13:35:03 UTC
(In reply to kinoe from comment #20)
> After todays Plasma 6 update 6.0.2-3 -> 6.0.3-1 this bug is relevant again,
> after it had been fixed in 6.0.2-3. Telegram-desktop and solaar systray
> icons are dark on dark.
it does affect kmail unread new mail icon too
Comment 23 Nate Graham 2024-03-31 20:23:40 UTC
The icon changes are landing in Frameworks 6.1 in a few weeks; only the plasma changes are already released.
Comment 24 Nicolas Fella 2024-04-03 10:01:03 UTC
Git commit bbc01b79af54094833a25b13134cf2bc585974bf by Nicolas Fella.
Committed on 03/04/2024 at 09:48.
Pushed by nicolasfella into branch 'Plasma/6.0'.

[applet/systemtray] Ensure that the custom icon loader is initialized

Currently it's only initialized if the icon has a custom theme path

M  +1    -1    applets/systemtray/statusnotifieritemsource.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/bbc01b79af54094833a25b13134cf2bc585974bf
Comment 25 kinoe 2024-04-14 08:07:30 UTC
(In reply to Nate Graham from comment #23)
> The icon changes are landing in Frameworks 6.1 in a few weeks; only the
> plasma changes are already released.

Todays update of Frameworks 6.1didn't fixed it. Kmail icon (and others) in systray are still dark on dark. It worsen even since Kmails standard icon was changed to monochrome with one of the last updates.
Comment 26 Nate Graham 2024-04-14 14:10:33 UTC
Looks like the latest commit in Plasma that's needed to fix this will be in 6.0.4, scheduled for release tomorrow.
Comment 27 Timothy B 2024-04-17 14:49:39 UTC
Can confirm that upgrading Plasma 6.0.4 fixed the icons on my EndeavourOS system. Before that, symbolic icons of KDE Gear apps, specifically Yakuake and Akregator, would remain dark no matter what Plasma theme I choose, even those that follow the color scheme like the default Breeze theme.
Comment 28 Timothy B 2024-04-17 14:51:49 UTC
*** Bug 484473 has been marked as a duplicate of this bug. ***
Comment 29 Timothy B 2024-04-18 02:58:27 UTC
Please disregard my previous comment. The linked bug report actually referred to similar behavior in the Add Widgets sidebar, but follow-up comments have managed to change the subject to the same behavior in system tray icons.
Comment 30 Driglu4it 2024-04-18 14:55:44 UTC
Fixed in 6.0.4 only for theme icons.
If the icon has an absolute path (Qt.resolvedUrl(***)) e.g. commynity plasmoid - this doesn't work...
Comment 31 Nate Graham 2024-04-18 21:18:33 UTC
Absolute path not working sounds like a different thing. Please submit a new bug report.
Comment 32 Driglu4it 2024-04-19 16:44:24 UTC
(In reply to Nate Graham from comment #31)
> Absolute path not working sounds like a different thing. Please submit a new
> bug report.

Thanks!
https://bugs.kde.org/show_bug.cgi?id=485801