[applets/systemtray] Load icons with Plasma palette

When using Breeze Twilight, i.e. dark Plasma and lights apps, we need to color the icons with the Plasma colors

CCBUG: 479712

BUG: 482645